--- a/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
+++ b/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
@@ -2,15 +2,15 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import com.alejojperez.pi_gpio_ui.core.controls.PinControl?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.alejojperez.pi_gpio_ui.modules.dashboard.views.DashboardView">
     <padding>
         <Insets left="150.0" right="150.0" top="30.0" />
     </padding>
     <children>
-        <Label text="Testing" prefWidth="400.0" styleClass="alert, alert-info, text-size-16" wrapText="true" />
+        <PinControl iconSize="50" styleClass="btn, btn-shadow, toggle-btn, btn-primary" />
     </children>
 
     <stylesheets>
