--- a/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
+++ b/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
@@ -2,18 +2,36 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import com.alejojperez.pi_gpio_ui.core.controls.PinControl?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.alejojperez.pi_gpio_ui.modules.dashboard.views.DashboardView">
+<?import javafx.scene.control.TableColumn?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
+      prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.alejojperez.pi_gpio_ui.modules.dashboard.views.DashboardView">
     <padding>
-        <Insets left="150.0" right="150.0" top="30.0" />
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
     <children>
-        <PinControl iconSize="50" styleClass="btn, btn-shadow, toggle-btn, btn-primary" />
+        <HBox prefHeight="40"/>
+
+        <TableView VBox.vgrow="ALWAYS" fx:id="pinsTable">
+            <columns>
+                <TableColumn text="Name"/>
+                <TableColumn text="Pin #"/>
+                <TableColumn text="Actions"/>
+            </columns>
+
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            </columnResizePolicy>
+        </TableView>
+
+        <HBox prefHeight="40"/>
     </children>
 
     <stylesheets>
-        <URL value="@../../../CSS/app.css" />
+        <URL value="@../../../CSS/app.css"/>
     </stylesheets>
 </VBox>
