--- a/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
+++ b/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
@@ -2,36 +2,34 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.TableColumn?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0"
-      prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.alejojperez.pi_gpio_ui.modules.dashboard.views.DashboardView">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.alejojperez.pi_gpio_ui.modules.dashboard.views.DashboardView">
     <padding>
-        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
     <children>
-        <HBox prefHeight="40"/>
+        <HBox prefHeight="40" />
 
-        <TableView VBox.vgrow="ALWAYS" fx:id="pinsTable">
+        <TableView fx:id="pinsTable" VBox.vgrow="ALWAYS">
             <columns>
-                <TableColumn text="Name"/>
-                <TableColumn text="Pin #"/>
-                <TableColumn text="Actions"/>
+                <TableColumn fx:id="tcName" text="Name" />
+                <TableColumn fx:id="tcPinNumber" text="Pin #" />
+                <TableColumn fx:id="tcActions" editable="false" maxWidth="60.0" minWidth="60.0" prefWidth="60.0" resizable="false" text="Init." />
             </columns>
 
             <columnResizePolicy>
-                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
         </TableView>
 
-        <HBox prefHeight="40"/>
+        <HBox prefHeight="40" />
     </children>
 
     <stylesheets>
-        <URL value="@../../../CSS/app.css"/>
+        <URL value="@../../../CSS/app.css" />
     </stylesheets>
 </VBox>
