--- a/src/main/resources/com/alejojperez/pi_gpio_ui/CSS/btn.css
+++ b/src/main/resources/com/alejojperez/pi_gpio_ui/CSS/btn.css
@@ -7,6 +7,21 @@
     -fx-border-color: transparent;
     -fx-border-radius: 4px;
 }
+.btn-lg {
+    -fx-padding: 10px 16px;
+    -fx-font-size: 18px;
+    -fx-border-radius: 6px;
+}
+.btn-sm {
+    -fx-padding: 5px 10px;
+    -fx-font-size: 12px;
+    -fx-border-radius: 3px;
+}
+.btn-xs {
+    -fx-padding: 1px 5px;
+    -fx-font-size: 12px;
+    -fx-border-radius: 3px;
+}
 .btn:pressed {
     -fx-effect: innershadow(three-pass-box, rgba(0, 0, 0, .125), 5, 0, 0, 3);
 }
