--- a/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
+++ b/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
@@ -1,24 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.alejojperez.pi_gpio_ui.modules.dashboard.views.DashboardView">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.alejojperez.pi_gpio_ui.modules.dashboard.views.DashboardView">
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </padding>
     <children>
-        <HBox prefHeight="40" />
+        <HBox alignment="TOP_RIGHT" prefHeight="40" spacing="5.0">
+            <padding>
+                <Insets bottom="10.0" top="10.0" />
+            </padding>
+
+            <children>
+                <TextField styleClass="form-control" />
+                <Button styleClass="btn, btn-primary" text="Search">
+                    <graphic>
+                        <FontAwesomeIconView glyphName="SEARCH" glyphStyle="-fx-fill: white" />
+                    </graphic>
+                </Button>
+                <Button onAction="#refreshTable" styleClass="btn, btn-primary" text="Refresh">
+                    <graphic>
+                        <FontAwesomeIconView glyphName="REFRESH" glyphStyle="-fx-fill: white" />
+                    </graphic>
+                </Button>
+            </children>
+        </HBox>
 
         <TableView fx:id="pinsTable" VBox.vgrow="ALWAYS">
             <columns>
                 <TableColumn fx:id="tcName" text="Name" />
                 <TableColumn fx:id="tcPinNumber" text="Pin #" />
-                <TableColumn fx:id="tcActions" editable="false" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" resizable="false" text="Actions" />
+                <TableColumn fx:id="tcInitialized" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" text="Initialized" />
+                <TableColumn fx:id="tcDirection" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" text="Direction" />
+                <TableColumn fx:id="tcOnOff" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" resizable="false" sortable="false" text="ON/OFF" />
             </columns>
 
             <columnResizePolicy>
@@ -26,7 +49,22 @@
             </columnResizePolicy>
         </TableView>
 
-        <HBox prefHeight="40" />
+        <HBox alignment="CENTER_RIGHT" prefHeight="40" spacing="5.0">
+         <children>
+            <Button fx:id="btnEdit" styleClass="btn, btn-primary" text="Edit...">
+                <graphic>
+                    <FontAwesomeIconView glyphName="PENCIL_SQUARE_ALT" glyphStyle="-fx-fill: #fff" />
+                </graphic>
+            </Button>
+            <Button styleClass="btn, btn-primary" text="Add...">
+                <graphic>
+                    <FontAwesomeIconView glyphName="PLUS" glyphStyle="-fx-fill: #fff" />
+                </graphic>
+            </Button>
+         </children>
+         <padding>
+            <Insets bottom="10.0" top="10.0" />
+         </padding></HBox>
     </children>
 
     <stylesheets>
