Added ability to change direction or value from the pins table

--- a/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
+++ b/src/main/resources/com/alejojperez/pi_gpio_ui/modules/dashboard/views/DashboardView.fxml
@@ -69,5 +69,6 @@
 
     <stylesheets>
         <URL value="@../../../CSS/app.css" />
+        <URL value="@../CSS/DashboardView.css" />
     </stylesheets>
 </VBox>
